# InformationTheoreticExploration

./: CMakeLists.txt  package.xml
include/mi_explorer/: const_values.h  mi_computer.h  mi_naive_explorer.h  mi_sc_explorer.h  naive_lattice.h  node_candidate.h  sc_motion_primitive.h
launch/: ctrl_stage.launch  naive_mi.launch  sc_mi.launch  sim_ctrl.launch  stage.launch
src/: mi_computer.cpp  mi_naive_explorer.cpp  mi_sc_explorer.cpp  naive_lattice.cpp  sc_motion_primitive.cpp
